[package]
name = "github_client"
version = "0.1.0"
edition = "2024"
authors = ["Ruziboyev97"]
description = "A modular Github client with GUI"

[dependencies]
iced = { version = "0.13.1", features = ["tokio"] } # Yangi Gui framwork

#Github API lari va network
octocrab = "0.44"
tokio ={ version = "1.28", features = ["full"] }

#Xatoliklar bilan ishlash
thiserror = "2.0.12"
anyhow = "1.0"

#Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#Sozlamalar
config = "0.15.11"